Practica con parrafos y etiquetas basicas de html

--- a/primera-web.html
+++ b/primera-web.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenidos a mi primera web de prueva</title>
+    <title>Lenguajes de programacion</title>
 </head>
 <body>
-    <p>Hola! esta es mi primera web</p>
+    <h1>Lenguajes de programacion de Backend</h1>
+    <P>A continuacion te vamos a mostrar algunos <b>lenguajes de programacion para Backend</b></P>
+    <h2><u>Java</u></h2>
+    <h3>Java EE</h3>
+    <p><i>ipsum dolor</i> sit amet consectetur, adipisicing elit. Beatae voluptatem optio ex itaque architecto sed dicta distinctio ducimus ab, quos fugit sit atque, consequatur nam voluptatum commodi eum unde nemo.</p>
+    <h2>Java SE</h2>
+    <br/>
+    <br>
+    <br>
+    <p>Java Estandar Edition  sirve para Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio adipisci aperiam praesentium? Iure iste harum quisquam omnis fugit voluptatum perferendis eveniet, praesentium rerum nobis, magnam labore inventore illum eaque tenetur!</p>
+    <h2>PHP</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil expedita ipsa esse. Dolorem, placeat! Consectetur quis iure tempore reprehenderit corrupti dolor iusto voluptatem sint, non, asperiores, eaque inventore. Facere, porro?</p>
+    <h2>C++</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt architecto atque, necessitatibus aliquid commodi tempora omnis minima possimus, tenetur deleniti quae ipsam, perferendis at? Nam, odit. Eaque nulla quas illum!</p>
+
 </body>
 </html>
