--- a/etiquetasComunes.html
+++ b/etiquetasComunes.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer paguina wed</title>
+    <title>Etiquetas Comunes</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
-    <!--<h2>Segundo Hola mundo</h2>-->
+    
 </body>
 </html>
