--- a/etiquetasComunes.html
+++ b/etiquetasComunes.html
@@ -6,6 +6,13 @@
     <title>Etiquetas Comunes</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Encabezado 1</h1>
+        <h2>Encabezado 2</h2>
+        <h3>Encabezado 3</h3>
+        <h3>Encabezado 4</h3>
+        <h3>Encabezado 5</h3>
+        <h3>Encabezado 6</h3>
+    </div>
 </body>
 </html>
