--- a/etiquetasComunes.html
+++ b/etiquetasComunes.html
@@ -7,12 +7,20 @@
 </head>
 <body>
     <div>
-        <h1>Encabezado 1</h1>
+        <!--<h1>Encabezado 1</h1>
         <h2>Encabezado 2</h2>
         <h3>Encabezado 3</h3>
         <h3>Encabezado 4</h3>
         <h3>Encabezado 5</h3>
-        <h3>Encabezado 6</h3>
+        <h3>Encabezado 6</h3>-->
+
+        <div>
+            <p>Hola Mundo de nuevo</p>
+        </div>
+        <span></span>
+        <!--La etiqueta a nos permite poner un enlace-->
+        <a href="https://google.com">Este es un enlace externo</a>
+        <a href="https://google.com">Este es un enlace interno</a>
     </div>
 </body>
 </html>
