--- a/etiquetasComunes.html
+++ b/etiquetasComunes.html
@@ -20,7 +20,16 @@
         <span></span>
         <!--La etiqueta a nos permite poner un enlace-->
         <a href="https://google.com">Este es un enlace externo</a>
-        <a href="https://google.com">Este es un enlace interno</a>
+        <a href="primera-web.html">Este es un enlace interno</a>
+        <div>
+            <h3>Listas</h3>
+            <div>
+                <h4>Listas ordenadas</h4>
+            </div>
+            <div>
+                <h4>Listas desordenadas</h4>
+            </div>
+        </div>
     </div>
 </body>
 </html>
