--- a/etiquetasComunes.html
+++ b/etiquetasComunes.html
@@ -25,9 +25,21 @@
             <h3>Listas</h3>
             <div>
                 <h4>Listas ordenadas</h4>
+                <ol>
+                    <li>Elemento 1</li>
+                    <li>Elemento 2</li>
+                    <li>Elemento 3</li>
+                    <li>Elemento 4</li>
+                </ol>
             </div>
             <div>
                 <h4>Listas desordenadas</h4>
+                <ul>
+                    <li>Elemento 1</li>
+                    <li>Elemento 2</li>
+                    <li>Elemento 3</li>
+                    <li>Elemento 4</li>
+                </ul>
             </div>
         </div>
     </div>
