--- a/forms-tables/formularios.html
+++ b/forms-tables/formularios.html
@@ -1,16 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div>
         <p>Vamos a escribir codigo</p>
-    </div>
-    <div>
-        <form action=""></form>
-    </div>
-</body>
-</html>
+        </div>
+        <div>
+        <form action="">
+            <div>
+            <label for="nombreUsuario">Nombre de usuario</label>
+            <input type="text" id="nombreUsuario" />
+            </div>
+            <div>
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" />
+            </div>
+            <button>Enviar</button>
+        </form>
+        </div>
+    </body>
+    </html>
