--- a/forms-tables/formularios.html
+++ b/forms-tables/formularios.html
@@ -10,14 +10,16 @@
         <p>Vamos a escribir codigo</p>
         </div>
         <div>
-        <form action="">
+        <form action="resultados.html" method="GET">
             <div>
             <label for="nombreUsuario">Nombre de usuario</label>
-            <input type="text" id="nombreUsuario" />
+            <input name="nombreusuario" type="text" id="nombreUsuario" />
             </div>
+            <label for="">Comentarios</label>
+            <textarea name="" id=""></textarea>
             <div>
             <label for="password">Contraseña</label>
-            <input type="password" id="password" />
+            <input name="password" type="password" id="password" />
             </div>
             <button>Enviar</button>
         </form>
