--- a/forms-tables/formularios.html
+++ b/forms-tables/formularios.html
@@ -20,6 +20,11 @@
                 <label for="comentarios">Comentarios</label>
                 <textarea name="comentarios" id="comentarios" required></textarea>
             </div>
+
+            <div>
+                <label for="edad">Edad</label>
+                <input name="edad" type="number" id="idedad" required>
+            </div>
             <br>
             <div>
                 <label for="password">Contraseña</label>
