--- a/forms-tables/formularios.html
+++ b/forms-tables/formularios.html
@@ -26,6 +26,11 @@
                 <input name="edad" type="number" id="idedad" required>
             </div>
             <br>
+
+            <div>
+                <label for="fecha">fecha</label>
+                <input name="fecha" type="date" id="idfecha" required>
+            </div>
             <div>
                 <label for="password">Contraseña</label>
                 <input name="password" type="password" id="password" required/>
