tablas tip de datos

--- a/forms-tables/introducion/tablas.html
+++ b/forms-tables/introducion/tablas.html
@@ -6,6 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h3>Horas para aprender html</h3>
+    <table>
+        <tr>
+            <th>Persona 1</th>
+            <th>Lunes</th>
+            <th>Martes</th>
+            <th>MIercoles</th>
+            <th>Jueves</th>
+            <th>Viernes</th>
+            <th>Sabado</th>
+            <th>Domingo</th>
+        </tr>
+        <tr>
+            <th>Maria</th>
+            <td>9 - 13</td>
+            <td>9 - 13</td>
+            <td>9 - 13</td>
+            <td>9 - 13</td>
+            <td>9 - 13</td>
+            <td>Descanso</td>
+            <td>Descanso</td>
+        </tr>
+        <tr>
+            <th>Andres</th>
+            <td>9 - 13</td>
+            <td>9 - 13</td>
+            <td>Descanso</td>
+            <td>5 - 13</td>
+            <td>9 - 13</td>
+            <td>4 - 13</td>
+            <td>Descanso</td>
+        </tr>
+    </table>
 </body>
 </html>
