Dimenciones de una imagen

--- a/forms-tables/03-Multimedia/multimedia.html
+++ b/forms-tables/03-Multimedia/multimedia.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="halo.webp" alt="imagen de Halo" width="500" height="300">
 </body>
 </html>
