--- a/forms-tables/03-Multimedia/multimedia.html
+++ b/forms-tables/03-Multimedia/multimedia.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Multimedia</h1>
+
+    <h3>Imagen</h3>
     <img src="halo.webp" alt="imagen de Halo" width="500" height="300">
+    
+    <h3>Video</h3>
+    <video src="Halo Landfall.mp4" controls></video>
 </body>
 </html>
