--- a/forms-tables/03-Multimedia/multimedia.html
+++ b/forms-tables/03-Multimedia/multimedia.html
@@ -13,5 +13,8 @@
     
     <h3>Video</h3>
     <video src="Halo Landfall.mp4" controls></video>
+    
+    <h3>Audio</h3>
+    <audio src="cancion de halo 2.mp3" controls autoplay type="audio/mp3s"></audio>
 </body>
 </html>
