selectores de clase css

--- a/forms-tables/04-Introduccion-CSS/webConCSS.html
+++ b/forms-tables/04-Introduccion-CSS/webConCSS.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Estilos CSS</h1>
-
     <p>parrafo</p>
+    <h2>Esta es la seccion de noticas</h2>
+    <p id="primeraNoticia">La primera noticia</p>
+    <p id="segundaNoticia">La segunda noticia</p>
+    <p class="terceraNoticia">La tercera noticia</p>
 </body>
 </html>
