como usar los selectores

--- a/forms-tables/04-Introduccion-CSS/webConCSS.html
+++ b/forms-tables/04-Introduccion-CSS/webConCSS.html
@@ -13,5 +13,12 @@
     <p id="primeraNoticia">La primera noticia</p>
     <p id="segundaNoticia">La segunda noticia</p>
     <p class="terceraNoticia">La tercera noticia</p>
+
+    <!--contenedor-->
+    <div>
+        <p class="autor">Autor 1</p>
+        <p class="fecha">Fecha 21/03/2025</p>
+        <p class="ubicacion">Ubicacion Bogota Colombia</p>
+    </div>
 </body>
 </html>
