Boton con estilos css en linea

--- a/forms-tables/04-Introduccion-CSS/utilidadesCSS.html
+++ b/forms-tables/04-Introduccion-CSS/utilidadesCSS.html
@@ -9,8 +9,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
         integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous" />
 </head>
+<style>
+    html{
+        padding: 5px;
+    }
+    p{
+        color: red;
+    }
+</style>
 <body>
     <p>Hola MUndo</p>
-    <button>Boton Guardar</button>
+    <button class="pure-button">Boton Guardar</button>
+    <button style="padding: 10px; bonder: none; border-radius: 10px;">Boton personalizado</button>
 </body>
 </html>
