--- a/forms-tables/04-Introduccion-CSS/introEstilos.html
+++ b/forms-tables/04-Introduccion-CSS/introEstilos.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h2 class="colores">Colores</h2>
+    <h2 class="color-rgb">Color rgb</h2>
+    <h2 class="color-rgba">Color rgba</h2>
 
 </body>
 </html>
