--- a/forms-tables/04-Introduccion-CSS/introEstilos.html
+++ b/forms-tables/04-Introduccion-CSS/introEstilos.html
@@ -11,5 +11,9 @@
     <h2 class="color-rgb">Color rgb</h2>
     <h2 class="color-rgba">Color rgba</h2>
 
+    <div class="fondo">
+        <p>Hola</p>
+        <h1>esto es un h1 dentro del div</h1>
+    </div>
 </body>
 </html>
