imagen con atribuctos

--- a/forms-tables/04-Introduccion-CSS/introEstilos.html
+++ b/forms-tables/04-Introduccion-CSS/introEstilos.html
@@ -15,5 +15,12 @@
         <p>Hola</p>
         <h1>esto es un h1 dentro del div</h1>
     </div>
+    <h3>Espacios y temañas</h3>
+    <div>
+        <h1 class="ancho">Cambiar anchura</h1>
+    </div>
+    <div class="altura">
+        <h1>Cambiar altura</h1>
+    </div>
 </body>
 </html>
