--- a/forms-tables/04-Introduccion-CSS/introEstilos.html
+++ b/forms-tables/04-Introduccion-CSS/introEstilos.html
@@ -22,5 +22,9 @@
     <div class="altura">
         <h1>Cambiar altura</h1>
     </div>
+    <div class="tarjeta">
+        <h3 class="encabezado">Titulo de tarjeta</h3>
+        <p class="descripcion">Esta es la descripcion de la tajeta</p>
+    </div>
 </body>
 </html>
