--- a/05-Disposiciones/overflow.html
+++ b/05-Disposiciones/overflow.html
@@ -23,5 +23,21 @@
           veritatis provident expedita autem.
         </p>
       </div>
+      <div class="contenedor-visible">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+          voluptates et? Maxime, sint temporibus. Consequatur nihil reiciendis,
+          hic labore impedit adipisci a? Voluptatum consectetur veniam iusto,
+          veritatis provident expedita autem.
+        </p>
+        <div class="contenedor-auto">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+              voluptates et? Maxime, sint temporibus. Consequatur nihil reiciendis,
+              hic labore impedit adipisci a? Voluptatum consectetur veniam iusto,
+              veritatis provident expedita autem.
+            </p>
+          </div>
+      </div>
   </body>
 </html>
