--- a/02-Formularios/formularioResgistro.html
+++ b/02-Formularios/formularioResgistro.html
@@ -9,22 +9,24 @@
 <body>
     <div class="container">
         <h3>Resgistrate en este formulario</h3>
-        <div>
+        <div class="bottons">
             <button class="google-btn">
-                <picture></picture>
+                <picture>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/1200px-Google_%22G%22_logo.svg.png" alt="imgGoole">
+                </picture>
                 <span>Resgistrate con Google</span>
-                <button class="twitter-btn">
-                    <picture></picture>
-                </button>
+            </button>
+            <button class="twitter-btn">
+                <picture>T</picture>
             </button> 
         </div>
         <div class="separador">
             <hr>
-            <span>O...</span>
+            <span>Or</span>
             <hr>
         </div>
         <form action="" method="">
-            <div>
+            <div class="section-inputs">
                 <label for="name">
                     <span>Name</span>
                     <input type="text" id="name" name="name">
