configuracion de inputs

--- a/02-Formularios/formularioResgistro.html
+++ b/02-Formularios/formularioResgistro.html
@@ -31,7 +31,7 @@
                     <span>Name</span>
                     <input type="text" id="name" name="name">
                 </label>
-                <label for="username"></label>
+                <label for="username">
                     <span>Username</span>
                     <input type="text" id="username" name="username">
                 </label>
