configuracion de boton crear cuenta

--- a/02-Formularios/formularioResgistro.html
+++ b/02-Formularios/formularioResgistro.html
@@ -44,11 +44,11 @@
                 <span>Password</span>
                 <input type="password" id="password" name="password" placeholder="6+ caracteres">
             </label>
-            <label for="checkbox">
+            <label for="checkbox" class="checkbox-label">
                 <input type="checkbox" id="checkbox">
                 <span>Acepto las condiciones y politicas de la pagina y el aviso legal</span>
             </label>
-            <button type="submit">Crear cuenta</button>
+            <button type="submit" class="submit-btm">Crear cuenta</button>
         </form>
     </div>
 </body>
