--- a/06-Bootstrap/bootstrap.html
+++ b/06-Bootstrap/bootstrap.html
@@ -7,12 +7,28 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-</head>
+    <style>
+        .relleno {
+            background-color: rgb(255, 0, 157);
+            border: 1px solid white;
+            padding: 5px;
+        }
+    </style>
+    </head>
 
 <body class="container">
-    <div>
-        <h1>Hello, world!</h1>
+    <!-- <div class="row">
+        <div class="col relleno">colomna 1</div>
+        <div class="col relleno">colomna 2</div>
+        <div class="col relleno">colomna 3</div>
+        <div class="col-6 relleno">colomna 4</div>
     </div>
+    <div class="row"></div>
+        <div class="col-2 relleno">colomna 1</div>
+        <div class="col relleno">colomna 2</div>
+    </div> -->
+
+    <button type="button" class="btn btn-warning">Boton</button>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
