--- a/08-Tooltip/tooltip.html
+++ b/08-Tooltip/tooltip.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="tooltip.css">
 </head>
 <body>
-    <button class="btn-tooltip">Bucar</button>
+    <button class="btn-tooltip">Bucar
+        <span class="tooltip">Hace una busqueda de tu nombre</span>
+    </button>
 </body>
 </html>
