--- a/0-Responsive/unidades.html
+++ b/0-Responsive/unidades.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Unidades fijas y relativas</h1>
+    <div class="escenario-1">
+        <div class="px">200px</div>
+        <div class="procentaje">50%</div>
+        <div class="view">50vw</div>
+    </div>
+    <div class="escenario-2">
+        <div class="px">200px</div>
+        <div class="procentaje">50%</div>
+        <div class="view">50vw</div>
+    </div>
 </body>
 </html>
