--- a/0-Responsive/unidades.html
+++ b/0-Responsive/unidades.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="unidades.css">
 </head>
 <body>
     <h1>Unidades fijas y relativas</h1>
-    <div class="escenario-1">
+    <div class="escenario-1 escenario">
         <div class="px">200px</div>
-        <div class="procentaje">50%</div>
+        <div class="porcentaje">50%</div>
         <div class="view">50vw</div>
     </div>
-    <div class="escenario-2">
+    <div class="escenario-2 escenario">
         <div class="px">200px</div>
-        <div class="procentaje">50%</div>
+        <div class="porcentaje">50%</div>
         <div class="view">50vw</div>
     </div>
 </body>
