--- a/09-Responsive/flexbox.html
+++ b/09-Responsive/flexbox.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="contenedor">
-        <div class="item item1"></div>
-        <div class="item item2"></div>
-        <div class="item item3"></div>
-        <div class="item item4"></div>
+        <div class="item item1">Item 1</div>
+        <div class="item item2">Item 2</div>
+        <div class="item item3">Item 3</div>
+        <div class="item item4">Item 4</div>
     </div>
 </body>
 </html>
