--- a/09-Responsive/variables.html
+++ b/09-Responsive/variables.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Variables</title>
+    <link rel="stylesheet" href="variables.css">
 </head>
 <body>
-    
+    <div class="contenedor">
+        <h1 class="titulo">Titulo</h1>
+        <p class="parrafo">Este es el parrafo</p>
+        <p class="footer">Este es el pie de pagina</p>
+    </div>
 </body>
 </html>
