--- a/10-Bootstrap-grid/bootstrap-grid.html
+++ b/10-Bootstrap-grid/bootstrap-grid.html
@@ -14,7 +14,23 @@
   </head>
 
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">col -> xs</div>
+            <div class="col">col -> xs</div>
+            <div class="col">col -> xs</div>
+        </div>
+        <div class="row">
+            <div class="col-sm">col -> sm</div>
+            <div class="col-sm">col -> sm</div>
+            <div class="col-sm">col -> sm</div>
+        </div>
+        <div class="row">
+            <div class="col">col -> </div>
+            <div class="col">col -></div>
+            <div class="col">col -></div>
+        </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
