--- a/10-Bootstrap-grid/bootstrap-grid.html
+++ b/10-Bootstrap-grid/bootstrap-grid.html
@@ -16,9 +16,9 @@
   <body>
     <div class="container">
         <div class="row">
-            <div class="col">col -> xs</div>
-            <div class="col">col -> xs</div>
-            <div class="col">col -> xs</div>
+            <div class="col-xs">col -> xs</div>
+            <div class="col-xs">col -> xs</div>
+            <div class="col-xs">col -> xs</div>
         </div>
         <div class="row">
             <div class="col-sm">col -> sm</div>
@@ -26,9 +26,24 @@
             <div class="col-sm">col -> sm</div>
         </div>
         <div class="row">
-            <div class="col">col -> </div>
-            <div class="col">col -></div>
-            <div class="col">col -></div>
+            <div class="col-md">col -> md</div>
+            <div class="col-md">col -> md</div>
+            <div class="col-md">col -> md</div>
+        </div>
+        <div class="row">
+            <div class="col-lg">col -> lg</div>
+            <div class="col-lg">col -> lg</div>
+            <div class="col-lg">col -> lg</div>
+        </div>
+        <div class="row">
+            <div class="col-xl">col -> xl</div>
+            <div class="col-xl">col -> xl</div>
+            <div class="col-xl">col -> xl</div>
+        </div>
+        <div class="row">
+            <div class="col-xxl">col -> xxl</div>
+            <div class="col-xxl">col -> xxl</div>
+            <div class="col-xxl">col -> xxl</div>
         </div>
     </div>
     <script
