--- a/11-Bootstrap-elementos/tablas.html
+++ b/11-Bootstrap-elementos/tablas.html
@@ -9,7 +9,29 @@
   <body>
     
     <div class="container">
-        <div class="row"></div>
+        <div class="row">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>APellido</th>
+                        <th>Usuario</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Gorka</td>
+                        <td>Billar</td>
+                        <td>Eremily</td>
+                    </tr>
+                    <tr></tr>
+                        <td>Gorka</td>
+                        <td>Billar</td>
+                        <td>Eremily</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
