--- a/11-Bootstrap-elementos/tablas.html
+++ b/11-Bootstrap-elementos/tablas.html
@@ -24,10 +24,15 @@
                         <td>Billar</td>
                         <td>Eremily</td>
                     </tr>
-                    <tr></tr>
-                        <td>Gorka</td>
+                    <tr>
+                        <td>andrio</td>
                         <td>Billar</td>
                         <td>Eremily</td>
+                    </tr>
+                    <tr>
+                        <td>Plaza</td>
+                        <td>Liexer</td>
+                        <td>Gustabo</td>
                     </tr>
                 </tbody>
             </table>
