--- a/11-Bootstrap-elementos/tablas.html
+++ b/11-Bootstrap-elementos/tablas.html
@@ -10,7 +10,7 @@
     
     <div class="container">
         <div class="row">
-            <table>
+            <table class="table">
                 <thead>
                     <tr>
                         <th>Nombre</th>
@@ -25,9 +25,9 @@
                         <td>Eremily</td>
                     </tr>
                     <tr>
-                        <td>andrio</td>
-                        <td>Billar</td>
-                        <td>Eremily</td>
+                        <td>brito</td>
+                        <td>suees</td>
+                        <td>julia</td>
                     </tr>
                     <tr>
                         <td>Plaza</td>
