tipos de clases table

--- a/11-Bootstrap-elementos/tablas.html
+++ b/11-Bootstrap-elementos/tablas.html
@@ -19,7 +19,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="table-success">
                         <td>Gorka</td>
                         <td>Billar</td>
                         <td>Eremily</td>
