clases en filas

--- a/11-Bootstrap-elementos/tablas.html
+++ b/11-Bootstrap-elementos/tablas.html
@@ -29,7 +29,7 @@
                         <td>suees</td>
                         <td>julia</td>
                     </tr>
-                    <tr>
+                    <tr class="table-danger">
                         <td>Plaza</td>
                         <td>Liexer</td>
                         <td>Gustabo</td>
