--- a/11-Bootstrap-elementos/tablas.html
+++ b/11-Bootstrap-elementos/tablas.html
@@ -10,7 +10,7 @@
     
     <div class="container">
         <div class="row">
-            <table class="table">
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>Nombre</th>
@@ -19,7 +19,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="table-success">
+                    <tr class="table-success ">
                         <td>Gorka</td>
                         <td>Billar</td>
                         <td>Eremily</td>
