--- a/11-Bootstrap-elementos/tablas.html
+++ b/11-Bootstrap-elementos/tablas.html
@@ -10,7 +10,7 @@
     
     <div class="container">
         <div class="row">
-            <table class="table table-hover">
+            <table class="table table-hover table-striped">
                 <thead>
                     <tr>
                         <th>Nombre</th>
