tipos de estilos de alertas

--- a/12-Alertas/alertas.html
+++ b/12-Alertas/alertas.html
@@ -12,8 +12,8 @@
     />
   </head>
   <body>
-    <div class="container">
-      <div class="alert alert-primary" role="alert">
+    <div class="container py-4">
+      <div class="alert alert-success" role="alert">
         A simple primary alert—check it out!
       </div>
     </div>
