--- a/12-Alertas/alertas.html
+++ b/12-Alertas/alertas.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <div class="container py-4">
-      <div class="alert alert-success" role="alert">
-        A simple primary alert—check it out!
+      <div class="alert alert-info" role="alert">
+        A simple primary alert—check it out! <a href="#"> aqui el link</a>
       </div>
     </div>
 
