tarjetas con imagenes

--- a/12-Alertas/tarjetas.html
+++ b/12-Alertas/tarjetas.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <div class="container py-4">
-        <div class="card">
-            <h5 class="card-title">Card title</h5>
+        <div class="card" style="width: 15rem;">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_6WNnuzUUI0IhZZI48qdVmPDOjks9nUe9xQ&s" alt="img" class="card-img-top">
             <div class="card-body">
+                <h5 class="card-title">Card title</h5>
                 Este es el Body de la tarjeta
             </div>
         </div>
