--- a/12-Alertas/tarjetas.html
+++ b/12-Alertas/tarjetas.html
@@ -12,7 +12,7 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_6WNnuzUUI0IhZZI48qdVmPDOjks9nUe9xQ&s" alt="img" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                Este es el Body de la tarjeta
+                <p class="card-text">Este es el Body de la tarjeta</p>
             </div>
         </div>
     </div>
