--- a/HTML-CSS/Reto-1/index.html
+++ b/HTML-CSS/Reto-1/index.html
@@ -7,6 +7,13 @@
     <title>Profile card component</title>
   </head>
   <body>
-   
+   <img src="assets/images/top-circle.svg" alt="top-circle">
+   <img src="assets/images/bottom-circle.svg" alt="bottom-circle">
+
+   <article class="card">
+    <header class="card__header">
+      <img src="" alt="">
+    </header>
+   </article>
   </body>
 </html>
