--- a/HTML-CSS/Reto-1/index.html
+++ b/HTML-CSS/Reto-1/index.html
@@ -12,7 +12,8 @@
 
    <article class="card">
     <header class="card__header">
-      <img src="" alt="">
+      <img src="assets/images/card-pattern.svg" alt="pattern card">
+      <img src="assets/images/victor.jpg" alt="profile image">
     </header>
    </article>
   </body>
