--- a/HTML-CSS/Reto-1/index.html
+++ b/HTML-CSS/Reto-1/index.html
@@ -15,6 +15,12 @@
       <img src="assets/images/card-pattern.svg" alt="pattern card">
       <img src="assets/images/victor.jpg" alt="profile image">
     </header>
+    <section class="card__body">
+      <p class="card__text">Victor Crest
+        <span class="card__text card__text--light"></span>
+      </p>
+      <p class="card_text card__text--light"></p>
+    </section>
    </article>
   </body>
 </html>
