--- a/HTML-CSS/Reto-1/index.html
+++ b/HTML-CSS/Reto-1/index.html
@@ -17,10 +17,20 @@
     </header>
     <section class="card__body">
       <p class="card__text">Victor Crest
-        <span class="card__text card__text--light"></span>
+        <span class="card__text card__text--light">26</span>
       </p>
-      <p class="card_text card__text--light"></p>
+      <p class="card_text card__text--light">London</p>
     </section>
+    <footer class="card__footer">
+      <div class="card__stat">
+        <p class="card__number">80K</p>
+        <p class="card__text card__text--light">Followers</p>
+      </div>
+      <div class="card__stat">
+        <p class="card__number">80K</p>
+        <p class="card__text card__text--light">Followers</p>
+      </div>
+    </footer>
    </article>
   </body>
 </html>
