--- a/HTML-CSS/Reto-1/index.html
+++ b/HTML-CSS/Reto-1/index.html
@@ -27,8 +27,12 @@
         <p class="card__text card__text--light">Followers</p>
       </div>
       <div class="card__stat">
-        <p class="card__number">80K</p>
-        <p class="card__text card__text--light">Followers</p>
+        <p class="card__number">803K</p>
+        <p class="card__text card__text--light">Likes</p>
+      </div>
+      <div class="card__stat">
+        <p class="card__number">1.4K</p>
+        <p class="card__text card__text--light">Photos</p>
       </div>
     </footer>
    </article>
