--- a/HTML-CSS/Reto-1/index.html
+++ b/HTML-CSS/Reto-1/index.html
@@ -7,8 +7,8 @@
     <title>Profile card component</title>
   </head>
   <body>
-   <img src="assets/images/top-circle.svg" alt="top-circle">
-   <img src="assets/images/bottom-circle.svg" alt="bottom-circle">
+   <img src="assets/images/top-circle.svg" class="bg-image bg-image--top" alt="top-circle">
+   <img src="assets/images/bottom-circle.svg" class="bg-image bg-image--bottom" alt="bottom-circle">
 
    <article class="card">
     <header class="card__header">
