--- a/HTML-CSS/Reto-1/index.html
+++ b/HTML-CSS/Reto-1/index.html
@@ -12,8 +12,8 @@
 
    <article class="card">
     <header class="card__header">
-      <img src="assets/images/card-pattern.svg" alt="pattern card">
-      <img src="assets/images/victor.jpg" alt="profile image">
+      <img src="assets/images/card-pattern.svg" alt="pattern card" class="card__header-image">
+      <img src="assets/images/victor.jpg" alt="profile image" class="card__header-profile">
     </header>
     <section class="card__body">
       <p class="card__text">Victor Crest
