--- a/HTML-CSS/Reto-1/index.html
+++ b/HTML-CSS/Reto-1/index.html
@@ -22,15 +22,15 @@
       <p class="card_text card__text--light">London</p>
     </section>
     <footer class="card__footer">
-      <div class="card__stat">
+      <div class="card__stats">
         <p class="card__number">80K</p>
         <p class="card__text card__text--light">Followers</p>
       </div>
-      <div class="card__stat">
+      <div class="card__stats">
         <p class="card__number">803K</p>
         <p class="card__text card__text--light">Likes</p>
       </div>
-      <div class="card__stat">
+      <div class="card__stats">
         <p class="card__number">1.4K</p>
         <p class="card__text card__text--light">Photos</p>
       </div>
