--- a/HTML-CSS/12-Alertas/froms-2.html
+++ b/HTML-CSS/12-Alertas/froms-2.html
@@ -1,17 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Forms</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="container pt-4">
-        <form>
+      <form action="">
+        <div class="row">
+          <select class="form-select mb-3">
+            <option value="1">Uno</option>
+            <option value="2">Dos</option>
+            <option value="3">Tres</option>
+          </select>
+
+          <select class="form-select mb-3 form-select-mb">
+            <option value="1">Uno</option>
+            <option value="2">Dos</option>
+            <option value="3">Tres</option>
+          </select>
+
+          <select multiple class="form-select mb-3 form-select-lg" disabled>
+            <option value="1">Uno</option>
+            <option value="2">Dos</option>
+            <option value="3">Tres</option>
+          </select>
+        </div>
+
+        <div > 
+            <input type="checkbox" class="from-check-input" id="check" checked>
+            <label for="check" class="form-check-label">Estoy de acuerdo con las condiciones</label>
+        </div>
+
+        <div class="mt-4">
+            <div class="form-check">
+                <input class="from-check-input" type="radio" name="flexRadioDefault" value="menor de edad" id="radio-menor"> 
+                <label for="radio-menor">Soy menor de edad</label>
+            </div>
+    
+            <div class="form-check">
+                <input class="from-check-input" type="radio" name="flexRadioDefault" value="mayor de edad" id="radio-mayor">
+                <label for="radio-menor">Soy mayor de edad</label>
+            </div>
+        </div>
+
+        <div class="row mt-4">
             <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+        </div>
+      </form>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
