--- a/HTML-CSS/12-Alertas/froms-2.html
+++ b/HTML-CSS/12-Alertas/froms-2.html
@@ -39,7 +39,7 @@
             <label for="check" class="form-check-label">Estoy de acuerdo con las condiciones</label>
         </div>
 
-        <div class="mt-4">
+        <div class="row mt-4">
             <div class="form-check">
                 <input class="from-check-input" type="radio" name="flexRadioDefault" value="menor de edad" id="radio-menor"> 
                 <label for="radio-menor">Soy menor de edad</label>
