--- a/HTML-CSS/02-Formularios/formularioBasico.html
+++ b/HTML-CSS/02-Formularios/formularioBasico.html
@@ -23,6 +23,11 @@
                 <label for="msg">Mensaje:</label>
                 <textarea id="msg" name="user_message">Siempre estare aqui</textarea>
             </li>
+
+            <li>
+                <label for="msg">Mensaje:</label>
+                <textarea id="msg" name="user_message">Siempre estare aqui</textarea>
+            </li>
             
         </ul>
     </form>
