--- a/HTML-CSS/Basic_Syntax/Basuc_Syntax.html
+++ b/HTML-CSS/Basic_Syntax/Basuc_Syntax.html
@@ -11,9 +11,17 @@
     <p>My catis <strong>Very</strong> grumpy</p>
     <img src="https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png"
         alt="Firefox icon" />
-        
-        <input type="text">
-        <input type="text" disabled>
+
+    <input type="text">
+    <input type="text" disabled>
+    <a href="https://www.facebook.com/marketplace/medellin/search?query=intel%20core%20i7%204790&locale=es_LA">favorite
+        websited</a>
+
+    <a href="https://www.example.com" title="Isn't this fun?">
+        A link to my example.
+    </a>
+    
+    <a href="http://www.example.com" title="An &quot;interesting&quot; reference">A link to my example.com</a>
 
 </body>
 
