Estructura y semantica de una paguina web

--- a/HTML-CSS/Basic_Syntax/BasicHead.html
+++ b/HTML-CSS/Basic_Syntax/BasicHead.html
@@ -21,9 +21,26 @@
 </head>
 
 <body>
-    <h1>Meta examples</h1>
+    <h1>Yo soy el título de la historia</h1>
 
+
+    <h2>Capítulo 1: La oscura noche</h2>
+    <p>
+        Era una noche oscura. En algún lugar, un búho ululó. La lluvia azotó el ...
+    </p>
+
+    <h2>Capítulo 2: El silencio eterno</h2>
+    <p>Nuestro protagonista ni susurrar pudo al ver esa sombría figura ...</p>
+
+    <h3>El espectro habla</h3>
+
+    <p>
+        Habían pasado varias horas más, cuando de repente el espectro se incorporó y
+        exclamó: "¡Por favor, ten piedad de mi alma!"
+    </p>
     <p>Japanese example: ご飯が熱い。</p>
+    <p>Soy un párrafo, ¡desde luego que lo soy!</p>
+
 </body>
 
 </html>
