--- a/HTML-CSS/Basic_Syntax/BasicHead.html
+++ b/HTML-CSS/Basic_Syntax/BasicHead.html
@@ -41,6 +41,10 @@
     <p>Japanese example: ご飯が熱い。</p>
     <p>Soy un párrafo, ¡desde luego que lo soy!</p>
 
+    //titulo de cualquier rango
+    <span style="font-size: 32px; margin: 21px 0;">¿Es este un titular de primer rango?</span>
+
+
 </body>
 
 </html>
